--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-<table width="570" height="120" border="0" bgcolor="#e9e9e9" style="color: #e9e9e9; forgb(0, 0, 0)ly: 'Times New Roman'; font-size: medium; border-top: 5px solid #e4151e; border-radius: 0px 0px 15px 15px;">
+<table width="570" height="auto" border="0" bgcolor="#e9e9e9" style="color: #e9e9e9; forgb(0, 0, 0)ly: 'Times New Roman'; font-size: medium; border-top: 5px solid #e4151e; border-radius: 0px 0px 15px 15px;">
     <tbody style="">
         <tr style="">
             <th scope="row">
