--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-<table width="570" height="auto" border="0" bgcolor="#e9e9e9" style="color: #e9e9e9; forgb(0, 0, 0)ly: 'Times New Roman'; font-size: medium; border-top: 5px solid #e4151e; border-radius: 0px 0px 15px 15px;">
+<table width="570" height="160" border="0" bgcolor="#e9e9e9" style="color: #e9e9e9; forgb(0, 0, 0)ly: 'Times New Roman'; font-size: medium; border-top: 5px solid #e4151e; border-radius: 0px 0px 15px 15px;">
     <tbody style="">
         <tr style="">
             <th scope="row">
@@ -9,7 +9,7 @@
                     target="_blank"
                     data-saferedirecturl="https://www.google.com/url?q=https://jetecommerce.com.br/&amp;source=gmail&amp;ust=1541007816579000&amp;usg=AFQjCNEqlhKs3c3_PIg9hCyW6T1xvenaJQ"
                 >
-                    <img src="https://a.imagem.app/o0hbES.png" alt="Dinamica Digital" width="150px" class="CToWUd" style="padding: 20px;/* border-right: 0.1px solid #a6faff; */" />
+                    <img src="https://a.imagem.app/o0hbES.png" alt="Dinamica Digital" width="150px" class="CToWUd" style="padding-right: 20px; padding-left: 40px;/* border-right: 0.1px solid #a6faff; */" />
                 </a>
                 
             </th>
@@ -21,7 +21,7 @@
                         <tr style="text-decoration:unset;">
                             <td>
                                 <p style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; color: #e72c35; line-height: 1.3; font-size: 11px; text-decoration: none; margin-top: 14px;">
-                                    (47) 9 9688-5488&nbsp;<br />
+                                    (47) 9 9726-3002&nbsp;<br />
                                     <a
                                         href="https://jetecommerce.com.br/"
                                         style="text-decoration: none; color: #e4151e; font-weight: 700; letter-spacing: 0.5px;"
