--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                     style="text-decoration:unset;"
                                     data-saferedirecturl="https://www.google.com/url?q=https://www.facebook.com/dinamicadigital.ag&amp;source=gmail&amp;ust=1541007816579000&amp;usg=AFQjCNG6Mui8XiO3yl_nSZvN1JUVhvAbuw"
                                 >
-                                    <img src="https://a.imagem.app/oYZapk.png" alt="facebook" class="CToWUd" style="width: 16px; margin-left: 14px; margin-top: 24px;" />
+                                    <img src="https://a.imagem.app/o0FSdQ.png" alt="facebook" class="CToWUd" style="width: 16px; margin-left: 14px; margin-top: 24px;" />
                                 </a>
                                 <a
                                     style="text-decoration:unset;"
@@ -47,7 +47,7 @@
                                     target="_blank"
                                     data-saferedirecturl="https://www.google.com/url?q=https://www.linkedin.com/in/alexandre-bett-hillesheim-b6771b164/&amp;source=gmail&amp;ust=1541007816579000&amp;usg=AFQjCNGDnaB9g7x1eWrerJpdXsAdb-6vow"
                                 >
-                                    <img src="https://a.imagem.app/oYZNfG.png" alt="Linkedin" class="CToWUd" style="width: 16px;" />
+                                    <img src="https://a.imagem.app/o0Fkb1.png" alt="Linkedin" class="CToWUd" style="width: 16px;" />
                                 </a>
                                 <a
                                     style="text-decoration:unset;"
@@ -55,7 +55,7 @@
                                     target="_blank"
                                     data-saferedirecturl="https://www.google.com/url?q=https://instagram.com/xandesheem&amp;source=gmail&amp;ust=1541007816579000&amp;usg=AFQjCNEXajtXynE524QPxgQF8kqIAMy74Q"
                                 >
-                                    <img src="https://a.imagem.app/oYZyKV.png" alt="Instagram" class="CToWUd" style="width: 16px; " />
+                                    <img src="https://a.imagem.app/o0FHqb.png" alt="Instagram" class="CToWUd" style="width: 16px; " />
                                 </a>
                             </td>
                         </tr>
