--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                                 <a
                                     href="https://www.facebook.com/alexandre.hillesheim.102"
                                     target="_blank"
-                                    style="text-decoration:unset;"
+                                    style="text-decoration:none;"
                                     data-saferedirecturl="https://www.google.com/url?q=https://www.facebook.com/dinamicadigital.ag&amp;source=gmail&amp;ust=1541007816579000&amp;usg=AFQjCNG6Mui8XiO3yl_nSZvN1JUVhvAbuw"
                                 >
                                     <img src="https://a.imagem.app/o0FSdQ.png" alt="facebook" class="CToWUd" style="width: 16px; margin-left: 14px; margin-top: 24px;" />
                                 </a>
                                 <a
-                                    style="text-decoration:unset;"
+                                    style="text-decoration:none;"
                                     href="https://www.linkedin.com/in/alexandre-bett-hillesheim-b6771b164/"
                                     target="_blank"
                                     data-saferedirecturl="https://www.google.com/url?q=https://www.linkedin.com/in/alexandre-bett-hillesheim-b6771b164/&amp;source=gmail&amp;ust=1541007816579000&amp;usg=AFQjCNGDnaB9g7x1eWrerJpdXsAdb-6vow"
@@ -50,7 +50,7 @@
                                     <img src="https://a.imagem.app/o0Fkb1.png" alt="Linkedin" class="CToWUd" style="width: 16px;" />
                                 </a>
                                 <a
-                                    style="text-decoration:unset;"
+                                    style="text-decoration:none;"
                                     href="https://instagram.com/xandesheem"
                                     target="_blank"
                                     data-saferedirecturl="https://www.google.com/url?q=https://instagram.com/xandesheem&amp;source=gmail&amp;ust=1541007816579000&amp;usg=AFQjCNEXajtXynE524QPxgQF8kqIAMy74Q"
