--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
                 
             </th>
             <td style="padding-right: 20px;">
-                <h1 style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; font-size: 20px; color: #3c3c48; line-height: 0.7; font-weight: 700; margin-top: 5px; padding-top: 20px; ;">Implantador de E-commerce</h1>
-                <p style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; color: #3c3c48; font-size: 11px; line-height: 0.5; letter-spacing: 0.5px;">Especialista em Performance</p>
+                <h1 style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; font-size: 20px; color: #3c3c48; line-height: 0.7; font-weight: 700; margin-top: 5px; padding-top: 20px; ;">Alexandre Bett Hillesheim</h1>
+                <p style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; color: #3c3c48; font-size: 11px; line-height: 0.5; letter-spacing: 0.5px;">Implantador de E-commerce</p>
                 <table style="padding-bottom: 20px;">
                     <tbody>
                         <tr style="text-decoration:unset;">
                             <td>
                                 <p style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; color: #e72c35; line-height: 1.3; font-size: 11px; text-decoration: none; margin-top: 14px;">
+                                    
+                                    <a
+                                        href="https://api.whatsapp.com/send?phone=47997263002"
+                                        style="text-decoration: none; color: #e4151e; font-weight: 500; "
+                                        target="_blank"
+                                        data-saferedirecturl="https://www.google.com/url?q=https://github.com/XandeSheim&amp;source=gmail&amp;ust=1541007816580000&amp;usg=AFQjCNHcuyDoOxua3gIAtJp058OkIUttPw"
+                                    >
                                     (47) 9 9726-3002&nbsp;<br />
+                                    </a>
                                     <a
                                         href="https://jetecommerce.com.br/"
                                         style="text-decoration: none; color: #e4151e; font-weight: 700; letter-spacing: 0.5px;"
@@ -34,7 +42,7 @@
                             </td>
                             <td>
                                 <a
-                                    href="https://www.facebook.com/alexandre.hillesheim.102"
+                                    href="https://www.facebook.com/JETebusiness"
                                     target="_blank"
                                     style="text-decoration:none;"
                                     data-saferedirecturl="https://www.google.com/url?q=https://www.facebook.com/dinamicadigital.ag&amp;source=gmail&amp;ust=1541007816579000&amp;usg=AFQjCNG6Mui8XiO3yl_nSZvN1JUVhvAbuw"
@@ -43,7 +51,7 @@
                                 </a>
                                 <a
                                     style="text-decoration:none;"
-                                    href="https://www.linkedin.com/in/alexandre-bett-hillesheim-b6771b164/"
+                                    href="https://www.linkedin.com/company/jet-e-commerce/mycompany/"
                                     target="_blank"
                                     data-saferedirecturl="https://www.google.com/url?q=https://www.linkedin.com/in/alexandre-bett-hillesheim-b6771b164/&amp;source=gmail&amp;ust=1541007816579000&amp;usg=AFQjCNGDnaB9g7x1eWrerJpdXsAdb-6vow"
                                 >
@@ -51,7 +59,7 @@
                                 </a>
                                 <a
                                     style="text-decoration:none;"
-                                    href="https://instagram.com/xandesheem"
+                                    href="https://www.instagram.com/jetebusiness/"
                                     target="_blank"
                                     data-saferedirecturl="https://www.google.com/url?q=https://instagram.com/xandesheem&amp;source=gmail&amp;ust=1541007816579000&amp;usg=AFQjCNEXajtXynE524QPxgQF8kqIAMy74Q"
                                 >
